test/spec_vectors/call/fail/module_1.wat
(module (func $type-void-vs-num (i32.eqz (call 1))) (func))